--- a/index.html
+++ b/index.html
@@ -1,12 +1,79 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- jquery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+    <!-- bootstrap -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
+
 </head>
+
 <body>
 
+    <div class='container'>
+
+        <!-- 資料處理時畫面 -->
+        <div class="d-none my-5" id="show">
+            <span>資料處理中....<img src="https://i.imgur.com/pm9SKUg.gif"></span>
+        </div>
+
+        <!-- 主畫面 -->
+        <div id='main'>
+
+        </div>
+
+    </div>
+
+    <script>
+        $(function() {
+            start();
+        });
+
+        function start() {
+            let URL = "https://script.google.com/macros/s/AKfycbxXbv84F7ohFmCEhHR7SCG1Jasb6fXYU6ssQEYYSgygrTH5GGY/exec?op=ajax&ofsn=2&sn=2";
+            $.ajax({
+                url: URL,
+                type: 'GET',
+                dataType: "json",
+                error: function(xhr) {
+                    alert('發生錯誤！請重新再試一次～');
+                },
+                beforeSend: function() {
+                    document.getElementById('show').setAttribute("class", "my-5");
+                },
+                success: function(data) {
+                    //console.log(data);
+
+                    document.getElementById('show').setAttribute("class", "d-none my-5");
+                    //單一頁面
+                    console.log(data);
+                    /*
+                    {
+                        "ofsn": 2,
+                        "sn": 20,
+                        "row": {
+                            "sn": 2,
+                            "ofsn": 2,
+                            "title": "123"
+                        }
+                    }
+                    */
+                    let main = '';
+                    main += "<h2>" + data['row']['title'] + "</h2>";
+                    $('#main').html(main);
+                }
+            });
+        };
+    </script>
+
 </body>
+
 </html>
